--- a/style.css
+++ b/style.css
@@ -154,9 +154,9 @@ section {
 .banner-half-circle::before{
     content: "";
     width: 100%;
-    height: 100%;
+    height: 80%;
     position: absolute;
-    bottom: 1px;
+    bottom: 230px;
     left: 0;
     z-index: -2;
     background-image: url("./images/67.svg");
@@ -177,6 +177,7 @@ section {
 .section-title h6 {
     text-transform: uppercase;
     letter-spacing: 3px;
+    color: var(--grey);
 }
 
 /* .banner-image:before{
@@ -299,7 +300,13 @@ section {
     border: 2px solid black;
 }
 
-
+.story p {
+    line-height: 1.4;
+    color: var(--grey);
+    font-size: 1.3rem;
+    margin: 32px 0px;
+    font-weight: 500;
+}
 
 .header-text {
     font-weight: bolder;
