--- a/style.css
+++ b/style.css
@@ -18,6 +18,32 @@ html {
     --grey: #595757;
 }
 
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 3px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    /* background: var(--primary); 
+    border-radius: 10px; */
+    background-color: #28a745;  
+    border-radius: 4px;      
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #28a745;
+}
+
+
+
 p {
     line-height: 1.6;
 }
