--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ html {
 
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    /* box-shadow: inset 0 0 5px grey;  */
     border-radius: 3px;
 }
 
@@ -34,7 +34,7 @@ html {
     /* background: var(--primary); 
     border-radius: 10px; */
     background-color: #28a745;  
-    border-radius: 4px;      
+    border-radius: 2px;      
 }
 
 /* Handle on hover */
