--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ section {
     margin-left: 20px;
 }
 
-.navbar-dark .navbar-nav .nav-link:hover {
+.navbar .navbar-nav .nav-link:hover {
     color: var(--brand);
 }
 
