--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ section {
     color: black;
     margin-right: 20px;
     margin-left: 20px;
+    transition: all 0.5s ease;
 }
 
 .navbar .navbar-nav .nav-link:hover {
