--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    height:100vh;
+    width:100vw;
+    overflow-x: hidden;
+}
+
 
 :root {
     --brand: #28a745;
@@ -20,7 +26,7 @@ html {
 
 
 ::-webkit-scrollbar {
-    width: 6px;
+    width: 5px;
 }
 
 /* Track */
@@ -34,7 +40,7 @@ html {
     /* background: var(--primary); 
     border-radius: 10px; */
     background-color: #28a745;  
-    border-radius: 2px;      
+    border-radius: 0px;      
 }
 
 /* Handle on hover */
