--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
     font-family:  Nunito, sans-serif;
 }
 
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -24,6 +26,11 @@ body {
     --grey: #595757;
 }
 
+
+::selection {
+    color: white;
+    background: var(--brand);
+}
 
 ::-webkit-scrollbar {
     width: 5px;
@@ -264,6 +271,10 @@ section {
     font-size: 1.3rem;
     margin: 32px 0px;
     font-weight: 500;
+}
+
+.story-header {
+    border-image: url("./images/line-shape-2.svg") 100% 1 0 stretch;
 }
 
 .header-text {
