--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 body {
     height:100vh;
     width:100vw;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 
@@ -273,9 +273,9 @@ section {
     font-weight: 500;
 }
 
-.story-header {
+/* .story-header {
     border-image: url("./images/line-shape-2.svg") 100% 25 25 stretch;
-}
+} */
 
 .header-text {
     font-weight: bolder;
